--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "@types/base-64": "^1.0.2",
     "@types/mocha": "^10.0.6",
     "@types/node": "^20.13.0",
+    "@types/webdriverio": "^5.0.0",
+    "@typescript-eslint/eslint-plugin": "6.4.0",
+    "@typescript-eslint/parser": "^6.0.0",
     "@wdio/allure-reporter": "^8.38.0",
     "@wdio/appium-service": "^8.38.0",
     "@wdio/cli": "^8.38.1",
@@ -31,18 +34,16 @@
     "@wdio/mocha-framework": "^8.38.0",
     "@wdio/spec-reporter": "^8.38.0",
     "@wdio/types": "^8.37.0",
-    "allure-commandline": "2.29.0",
+    "allure-commandline": "^2.29.0",
     "appium-uiautomator2-driver": "^3.5.2",
     "dotenv": "^16.4.5",
-    "eslint": "^9.4.0",
+    "eslint": "^8.56.0",
+    "eslint-config-standard-with-typescript": "43.0.1",
     "eslint-plugin-wdio": "^8.37.0",
     "mocha": "^10.4.0",
     "path": "^0.12.7",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.4.5"
-  },
-  "devDependencies": {
-    "@types/webdriverio": "^5.0.0"
   }
 }
