--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "path": "^0.12.7",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.4.5"
-    }
+    "typescript": "^5.4.5",
+    "appium": "^2.6.0"
+  }
 }
