--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@wdio/spec-reporter": "^8.38.0",
     "@wdio/types": "^8.37.0",
     "allure-commandline": "^2.29.0",
+    "appium": "^2.6.0",
     "appium-uiautomator2-driver": "^3.5.2",
     "dotenv": "^16.4.5",
     "eslint": "^8.56.0",
@@ -42,9 +43,12 @@
     "eslint-plugin-wdio": "^8.37.0",
     "mocha": "^10.4.0",
     "path": "^0.12.7",
+    "pixelmatch": "^5.3.0",
+    "pngjs": "^7.0.0",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.4.5",
-    "appium": "^2.6.0"
+    "@types/pixelmatch": "^5.2.6",
+    "@types/pngjs": "^6.0.5"
   }
 }
